--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>JJ Leyva</h1>
+        <div class="logo">
+            <img src="./logo-removebg-preview.png" alt="JJ Leyva Logo">
+        </div>
         <nav>
-            <ul>
+            <ul class="botones">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#nosotros">Nosotros</a></li>
@@ -18,25 +20,46 @@
             </ul>
         </nav>
     </header>
-
-    <section id="inicio">
-        <h2>Bienvenidos a Nombre de la Empresa</h2>
-        <p>Ofrecemos soluciones tecnológicas innovadoras para su negocio.</p>
-    </section>
+    <div class="container">
+        <div class="instalacionesjjleyva">
+            <h1>Instalaciones Técnicas JJ Leyva</h1>
+            <img src="./img/1533838878.jpg" alt="enchufe">
+        </div>
+        
+        <div class="quienessomos">
+            <h3>Quiénes somos</h3>
+            <p class="encabezado">Una empresa donde la satisfacción del cliente es nuestra prioridad.</p> 
+               <p class="borde"> Especialistas en instalaciones Eléctricas, 
+                Fotovoltaicas así como red y datos para oficinas y comercios, etc.</p>
+            <footer>
+                <p><strong>José Javier Leyva Gutiérrez</strong></p>
+                <p><strong>Granada</strong></p>
+                <p><strong>679 61 47 56</strong></p>
+                <p><strong>jjleyva312@gmail.com</strong></p>
+            </footer>
+        </div>
+    </div>
 
     <section id="servicios">
-        <h2>Nuestros Servicios</h2>
-        <ul>
-            <li>Desarrollo de Software</li>
-            <li>Consultoría IT</li>
-            <li>Seguridad Informática</li>
-            <li>Soporte Técnico</li>
-        </ul>
+        <h2>Qué hacemos</h2>
+        <div class="services-container">
+            <ul>
+                <li>Instalaciones Fotovoltaicas  
+                    para auto consumo, en viviendas o en casas de campo.</li>
+                <li>Mantenimiento integral, informática y microinformática, 
+                    así como hardware y software.</li>
+                <li>Somos especialistas  instalaciones 
+                    eléctricas en todo tipo de viviendas, locales comerciales, 
+                    comunidades, garajes públicos.</li>
+                <li>Estamos certificados por CCNA (Cisco) para la instalación , 
+                    configuración de cableado de datos, switch, router, puntos AP.</li>
+            </ul>
+        </div>
     </section>
 
     <section id="nosotros">
         <h2>Sobre Nosotros</h2>
-        <p>Somos un equipo de profesionales dedicados a brindar soluciones tecnológicas de alta calidad.</p>
+        <p>Somos un equipo de profesionales con más de 10 años de experiencia brindando soluciones tecnológicas innovadoras.</p>
     </section>
 
     <section id="contacto">
@@ -56,7 +79,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Nombre de la Empresa. Todos los derechos reservados.</p>
+        <p>&copy; 2025 DualTech. Todos los derechos reservados.</p>
     </footer>
 
     <script src="scripts.js"></script>
