--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
         </div>
         <nav>
             <ul class="botones">
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#inicio"><Strong>Inicio</Strong></a></li>
+                <li><a href="#servicios"><Strong>Servicios</Strong></a></li>
+                <li><a href="#nosotros"><Strong>Nosotros</Strong></a></li>
+                <li><a href="#contacto"><Strong>Contacto</Strong></a></li>
             </ul>
         </nav>
     </header>
+    <main>
     <div class="container">
         <div class="instalacionesjjleyva">
             <h1>Instalaciones Técnicas JJ Leyva</h1>
-            <img src="./img/1533838878.jpg" alt="enchufe">
+            <img src="./img/1533838878.jpg" alt="enchufe" class="imagen-destacada">
         </div>
         
         <div class="quienessomos">
@@ -77,6 +78,7 @@
             <button type="submit">Enviar</button>
         </form>
     </section>
+    </main>
 
     <footer>
         <p>&copy; 2025 DualTech. Todos los derechos reservados.</p>
